syntax = "proto3";
package rarimo.rarimocore.rarimocore;

import "rarimocore/operation.proto";
import "rarimocore/confirmation.proto";
import "tokenmanager/item.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "gitlab.com/rarimo/rarimo-core/x/rarimocore/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateTransferOperation(MsgCreateTransferOp) returns (MsgCreateTransferOpResponse);
  rpc CreateConfirmation(MsgCreateConfirmation) returns (MsgCreateConfirmationResponse);
  rpc CreateChangeKeyECDSA(MsgCreateChangeKeyECDSA) returns (MsgCreateChangeKeyECDSAResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateTransferOp {
  string creator = 1;
  string tx = 2;
  string eventId = 3;
  string fromChain = 4;
  rarimo.rarimocore.tokenmanager.type tokenType = 5;
}

message MsgCreateTransferOpResponse {}

message MsgCreateConfirmation {
  string creator = 1;
  // hex-encoded
  string root = 2;
  repeated string indexes = 3;
  // hex-encoded
  string signatureECDSA = 4;
}
message MsgCreateConfirmationResponse {}

message MsgCreateChangeKeyECDSA {
  string creator = 1;
  // hex-encoded
  string newKey = 2;
}
message MsgCreateChangeKeyECDSAResponse {}


// this line is used by starport scaffolding # proto/tx/message
